--- a/courses/views/courses_view.xml
+++ b/courses/views/courses_view.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record model="ir.actions.act_window" id="courses_id">
         <field name="name">Courses</field>
@@ -13,15 +12,27 @@
               <group colspan="1">
                   <field name="name"/>
                   <field name="description"/>
+                  <field name="responsible"/>
               </group>
               <notebook colspan="4">
                 <page string="Sessions">
-                    <field name="sessions" nolabel="1"></field>
+                    <field name="course_id" nolabel="1"></field>
                 </page>
               </notebook>
           </form>
         </field>
     </record>
-    <menuitem id="menu_id" name="Courses" sequence="30"></menuitem>
+    <record id="course_tree_view" model="ir.ui.view">
+        <field name="name">Courses</field>
+        <field name="model">courses</field>
+        <field name="arch" type="xml">
+            <tree string="Courses">
+                  <field name="name"/>
+                  <field name="description"/>
+                  <field name="responsible"/>
+            </tree>
+        </field>
+    </record>
+    <menuitem id="menu_id" name="Open Academy" sequence="30"></menuitem>
     <menuitem id="submenu_id"  name="Courses" parent="menu_id" action="courses_id" sequence="1" ></menuitem>
 </odoo>
