--- a/courses/views/courses_view.xml
+++ b/courses/views/courses_view.xml
@@ -1,6 +1,6 @@
 <odoo>
     <record model="ir.actions.act_window" id="course_view">
-        <field name="name">course.view</field>
+        <field name="name">Courses</field>
         <field name="res_model">course</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_my_courses': 1}</field>
