--- a/courses/views/courses_view.xml
+++ b/courses/views/courses_view.xml
@@ -3,7 +3,7 @@
         <field name="name">Courses</field>
         <field name="res_model">course</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{'search_default_my_courses': 1}</field>
+        <field name="context">{"search_default_my_courses": 1}</field>
     </record>
 
     <record model="ir.ui.view" id="course_form_view">
